--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,3 +1,3 @@
 <nav>
-    <h1><a href="https://zainkarsan7.github.io/ETHZ-PHD-ZK/index.html">HTD(a)A </a></h1>
+    <h1><a href="https://zainkarsan7.github.io/ETHZ-PHD-ZK/docs/index.html">HTD(a)A </a></h1>
 </nav>
